--- a/complete.rmd
+++ b/complete.rmd
@@ -9,6 +9,7 @@ Attempting to create dataframe containing full results of August 2015 analysis o
 
 First step, creating combined dataframe. (as previously)
 ```{r, warning = FALSE}
+require(dplyr); require(ggplot2)
 setwd("C:/R/Aug2015")
 dat1<-read.table("Input_data_InVitro_0.5%_DMSO_DOXvsVehicle.csv", header=TRUE, sep=",")
 dat2<-read.table("Input_data_InVitro_0.5%_SCDi_DOXvsVehicle.csv", header=TRUE, sep=",")
@@ -22,6 +23,7 @@ colnames(dat3)<-c(colnames(dat3)[1], paste0("S-", colnames(dat3[2:21])))
 colnames(rep3)<-c(colnames(rep3)[1], paste0("R-", colnames(rep3[2:20])))
 comb1<-merge(dat3, rep3, by="Label")
 library(stringr)
+n<- length(grep("_", names(comb1)))
 ```
 
 Next, trying to extract different patterns for different lipids.
@@ -130,7 +132,18 @@ scal<- function(DAT){
 satlist3<- lapply(satlist2, scal)
 #p1<- satlist3[["TG"]]
 
+scal2<- function(df, exclude = c()){
+  ##df must contain column named "unsat"
+  
+  exclude2<- c("unsat", exclude)
+  excluded<- select(df, one_of(exclude2))
+  included<- names(df)[!(names(df)%in% exclude2)]
+  DAT<- select(df, one_of(included))
+  df2<-sweep(DAT,2,colSums(DAT), "/")
+  df3<- cbind(excluded, df2)
+  df3[order(df3$unsat),]
 
+  }
 ```
 
 Next, center to look at effect of a treatment on distribution as shift
@@ -188,6 +201,7 @@ exclude1<- c()
 plot_list1<- lapply(R_centlist, diff.plot, exclude1, order1)
 # plot_list1[["TG"]]
 
+
 for (i in names(plot_list1)){
   plot_list2<- vector("list", length(names(plot_list1)))
   plot_list2[[i]]<-plot_list1[[i]]+ ggtitle(paste("Changes in saturation of", i, "species"))
@@ -203,5 +217,408 @@ for (i in names(plot_list2)){
   print(plot_list2[[i]])
   }
 
+plot_list2[["TG"]]
+
+
 ```
 
+Next I want to make publishable figures that illustrate the changes in saturation from two samples
+
+```{r}
+se <- function(x) sqrt(var(x)/length(x))
+
+mneffect<- function(df, control, treatment){
+  #function that graphs changes in saturation profile between two groups
+  #takes a dataframe and two strings of column names
+  #output is gg barplot
+  
+  #### include some stop options if control and treatment columns are not present in names(df)
+  
+  df_control<- df[, names(df) %in% control]
+  df_treat<- df[, names(df) %in% treatment]
+  df_diff<- sweep(df_treat, 1, rowMeans(df_control), "-")
+  
+  ##Create df with all the data required for ggplot
+  df_diff2<- data.frame(DBs=df[,1])
+  df_diff2$mean<- apply(df_diff,1,mean)
+  df_diff2$sd<- apply(df_diff,1,se)
+  df_diff2$ctrlmn<- rowMeans(df_control)
+
+  
+
+    z<- ggplot(df_diff2, aes(x=DBs, y=mean, fill=mean>0))+
+       geom_bar(stat="identity", position="identity", color="black", size=0.5)+
+      geom_errorbar(aes(ymin=mean-sd, ymax=mean+sd),
+                  width=.2,                    # Width of the error bars
+                  position=position_dodge(.9))+
+      scale_x_continuous(breaks=seq(0,9,1))+
+      scale_y_continuous(breaks=seq(-0.1,0.3,0.05))+
+      scale_fill_manual(values=c("#CCEEFF", "#FFDDDD"), guide=FALSE) +
+      geom_hline(aes(yintercept=0))+labs(y="relative change")+
+      coord_cartesian(xlim = c(0.5, 8.5), ylim=c(-.2, 0.45))+
+      theme(axis.title.x=element_text(size = 25), axis.text.x=element_text(size=30),
+        axis.title.y=element_text(size = 25), axis.text.y=element_text(size=30))+
+      theme_bw()+
+  
+    geom_point(aes(size=ctrlmn, x= DBs, y=0.35), 
+               shape = 21, color= "black", fill= "cornsilk")+
+        scale_size_area(max_size=6.5, guide=FALSE)+
+        annotate("text", x=4.5, y=0.43, label= "TG species", size=5)+
+        annotate("text", x=4.5, y=0.39, label= "Abundance", size=3.5)
+  z  
+    
+}
+
+mneffect2<- function(df, control, treatment){
+  #function that graphs changes in saturation profile between two groups
+  #takes a dataframe and two strings of column names
+  #output is gg barplot
+  
+  #### include some stop options if control and treatment columns are not present in names(df)
+  
+  df_control<- df[, names(df) %in% control]
+  df_treat<- df[, names(df) %in% treatment]
+  df_diff<- sweep(df_treat, 1, rowMeans(df_control), "-")
+  
+  ##Create df with all the data required for ggplot
+  df_diff2<- data.frame(DBs=df[,1])
+  df_diff2$mean<- apply(df_diff,1,mean)
+  df_diff2$sd<- apply(df_diff,1,se)
+  df_diff2$ctrlmn<- rowMeans(df_control)
+
+  
+
+    z<- ggplot(df_diff2, aes(x=DBs, y=mean, fill=mean>0))+
+       geom_bar(stat="identity", position="identity", color="black", size=0.5)+
+      geom_errorbar(aes(ymin=mean-sd, ymax=mean+sd),
+                  width=.2,                    # Width of the error bars
+                  position=position_dodge(.9))
+        z  
+    
+}
+
+
+
+TG_effects<- function(lst, grp1, grp2){
+  ## takes two text strings, identifies columns in df with those names
+  ## takes list, extracts "TG" element as dataframe
+  ## performs mneffect() function on those columns
+  
+  df<-lst[["TG"]]
+  cols1<- grep(grp1, names(df), value=TRUE)
+  cols2<- grep(grp2, names(df), value=TRUE)
+  p<- mneffect2(df, cols1, cols2)
+  p
+}
+
+# rSTD_Veh<- grep("R-STD_Veh", names(satlist3[["TG"]]), value=TRUE)
+# sSTD_Veh<- grep("S-STD_Veh", names(satlist3[["TG"]]), value=TRUE)
+# 
+# mneffect(satlist3[["TG"]], rSTD_Veh, sSTD_Veh)
+
+serum_effect<-TG_effects(satlist3, "R-STD_Veh", "S-STD_Veh")
+TG_effects(satlist3, "R-STD_Veh", "R-DOX_Veh")
+TG_effects(satlist3, "R-STD_Veh", "R-STD_SCDi")
+TG_effects(satlist3, "R-DOX_Veh", "R-DOX_SCDi")
+
+
+TG_effects(satlist3, "S-STD_Veh", "S-DOX_Veh")
+TG_effects(satlist3, "S-STD_Veh", "S-STD_SCDi")
+TG_effects(satlist3, "S-DOX_Veh", "S-DOX_SCDi")
+
+names(satlist3[["TG"]])
+
+serum_effect2<-TG_effects(satlist3, "R-STD_Veh", "S-STD_Veh")
+SCD_effect_R<- TG_effects(satlist3, "R-STD_Veh", "R-STD_SCDi")
+
+serum_effect3<- serum_effect2 +  scale_x_continuous(breaks=seq(0,9,1))+
+      scale_y_continuous(breaks=seq(-0.1,0.075,0.025))+
+      scale_fill_manual(values=c("#CCEEFF", "#FFDDDD"), guide=FALSE) +
+      geom_hline(aes(yintercept=0))+labs(y="Relative Change", x= "Double Bonds")+
+      coord_cartesian(xlim = c(0.5, 8.5), ylim=c(-0.075, 0.12))+
+      theme(axis.title.x=element_text(size = 25), axis.text.x=element_text(size=30),
+        axis.title.y=element_text(size = 25), axis.text.y=element_text(size=30))+
+      theme_bw() + geom_point(aes(size=ctrlmn, x= DBs, y=0.105), shape = 21, color= "black", fill= "cornsilk")+
+        scale_size_area(max_size=6.5, guide=FALSE)+
+        annotate("text", x=4.5, y=0.085, label= "Change in TG saturation", size=3)+
+        annotate("text", x=4.5, y=0.12, label= "Abundance", size=3)
+
+############ Figure generation######################################################
+#ggsave("./20160126/TG_serum_effect.pdf", plot = serum_effect3, width=3, height=4, useDingbats=FALSE)
+## used this to generate figure. Had to change plot thickness to 2 in illustrator
+##very important to use useDingbats=FALSE here for geom_point to be visible in Illustrator
+####################################################################################
+
+rdox_effect<- TG_effects(satlist3, "R-STD_Veh", "R-DOX_Veh")
+sdox_effect<- TG_effects(satlist3, "S-STD_Veh", "S-DOX_Veh")
+rdox_effect2<- rdox_effect+  scale_x_continuous(breaks=seq(0,9,1))+
+      scale_y_continuous(breaks=seq(-0.1,0.1,0.025))+
+      scale_fill_manual(values=c("#CCEEFF", "#FFDDDD"), guide=FALSE) +
+      geom_hline(aes(yintercept=0))+labs(y="Relative Change", x= "Double Bonds")+
+      coord_cartesian(xlim = c(0.5, 8.5), ylim=c(-0.07, 0.1))+
+      theme(axis.title.x=element_text(size = 25), axis.text.x=element_text(size=30),
+        axis.title.y=element_text(size = 25), axis.text.y=element_text(size=30))+ theme_bw() + 
+      ggtitle("Change in TG saturation after \nDGAT loss under 5% serum")
+sdox_effect2<-sdox_effect+  scale_x_continuous(breaks=seq(0,9,1))+
+      scale_y_continuous(breaks=seq(-0.1,0.1,0.025))+
+      scale_fill_manual(values=c("#CCEEFF", "#FFDDDD"), guide=FALSE) +
+      geom_hline(aes(yintercept=0))+labs(y="Relative Change", x= "Double Bonds")+
+      coord_cartesian(xlim = c(0.5, 8.5), ylim=c(-0.07, 0.1))+
+      theme(axis.title.x=element_text(size = 25), axis.text.x=element_text(size=30),
+        axis.title.y=element_text(size = 25), axis.text.y=element_text(size=30))+
+      theme_bw() + ggtitle("Change in TG saturation after \nDGAT loss under 0.5% serum")
+############ Figure generation######################################################
+#ggsave("./20160127/rdoxeffect.pdf", plot = rdox_effect2, width=2.5, height=4, useDingbats=FALSE)
+#ggsave("./20160127/sdoxeffect.pdf", plot = sdox_effect2, width=2.5, height=4, useDingbats=FALSE)
+## used this to generate figure. Had to change plot thickness to 2 in illustrator
+##very important to use useDingbats=FALSE here for geom_point to be visible in Illustrator
+####################################################################################
+
+
+FAsplit<- function(df){
+  ## function to take dataframe of lipids and split into individual FA chains
+  ## df needs to contain columns with chain length and number of double bonds for each FA
+  ## this was done above using stringr breakup of lipid name into constituents
+  ## takes each TG and introduces that entry three times, once for each FA chain, 
+  ## preserving only chain length/saturation for one of the chains in each entry. 
+  ## assumes the following naming for columns: 
+          ### All sample column names include "_"
+          ### chain length columns named "ch1", "ch2", "ch3" ("ch2" and "ch3" might be absent)
+          ### DB number columns "ch1DBs", "ch2DBs", "ch3DBs" (last two might be absent)
+
+  ch1<- c(grep("ch1$", names(df)), grep("ch1DBs", names(df)))
+  ch2<- c(grep("ch2$", names(df)), grep("ch2DBs", names(df)))
+  ch3<- c(grep("ch3$", names(df)), grep("ch3DBs", names(df)))
+  
+  if (!("ch1" %in% names(df) & "ch1DBs" %in% names(df))){
+    stop("chain length and saturation not provided in correct format")
+  }
+  cols1<- c(ch1, grep("_", names(df)))
+  df2<- df[,cols1]
+  names(df2)<- c("length", "unsat", names(df)[grep("_", names(df))]) 
+    
+  if ("ch2" %in% names(df) & "ch2DBs" %in% names(df)){
+    cols2<- c(ch2, grep("_", names(df)))
+    df_ch2<- df[,cols2]
+    names(df_ch2)<- c("length", "unsat", names(df)[grep("_", names(df))]) 
+    df2<- rbind(df2, df_ch2)
+  }
+  
+  if ("ch3" %in% names(df) & "ch3DBs" %in% names(df)){
+    cols3<- c(ch3, grep("_", names(df)))
+    df_ch3<- df[,cols3]
+    names(df_ch3)<- c("length", "unsat", names(df)[grep("_", names(df))]) 
+    df2<- rbind(df2, df_ch3)
+  }
+  df2
+}
+
+byFAlist1<- lapply(satlist1 , FAsplit)
+byFAlist2<- lapply(byFAlist1, scal2, exclude= c("length"))
+
+FAs<- byFAlist1[["PC"]]
+
+desat.index<- function(df, exclude=c()){
+  ## function takes df with following columns
+  ### Samples with lipid quantity measurements
+  ### each row is one lipid measurement
+  ### column named "unsat" containing number of double bonds in that lipid
+  ## calculates desaturation index for each sample
+  ## allows for exclusion of columns from calculation
+  
+  exclude2<- c("unsat", exclude)  #vector of columns to exclude from calculation
+  excluded<- select(df, one_of(exclude2))   # df of excluded columns
+  include<- names(df)[!(names(df)%in% exclude2)]  # vector of columns to include
+  DAT<- select(df, one_of(include))  #df of columns of interest
+  excluded$unsat<- as.numeric(excluded$unsat)
+  DAT2<- sweep(DAT, 1, excluded$unsat, "*")
+  Vec1<- colMeans(DAT2)
+  names(Vec1)<- names(DAT2)
+  Vec1
+}
+
+
+DesatIndex1<- vapply(byFAlist2, desat.index, exclude= c("length"), FUN.VALUE = numeric(n))
+DesatIndex2<- data.frame(DesatIndex1)
+lipids<- names(DesatIndex2)
+DesatIndex2$Sample<- row.names(DesatIndex2)
+
+
+sSTD_Veh<- grep("S-STD_Veh" , DesatIndex2$Sample, value = TRUE)
+sSTD_SCDi<- grep("S-STD_SCDi" , DesatIndex2$Sample, value = TRUE)
+
+sDOX_Veh<- grep("S-DOX_Veh" , DesatIndex2$Sample, value = TRUE)
+sDOX_SCDi<- grep("S-DOX_SCDi" , DesatIndex2$Sample, value = TRUE)
+
+rSTD_Veh<- grep("R-STD_Veh" , DesatIndex2$Sample, value = TRUE)
+rSTD_SCDi<- grep("R-STD_SCDi" , DesatIndex2$Sample, value = TRUE)
+
+rDOX_Veh<- grep("R-DOX_Veh" , DesatIndex2$Sample, value = TRUE)
+rDOX_SCDi<- grep("R-DOX_SCDi" , DesatIndex2$Sample, value = TRUE)
+lipids2<- lipids[!(lipids %in% c("Cer", "ChE", "DG", "PG", "PI", "PS", "PE", "SM"))]
+
+desat.effect<- function(df, control, treatment, lipids){
+  df_control<- filter(df, Sample %in% control) %>% select(one_of(lipids))
+  df_treat<- filter(DesatIndex2, Sample %in% treatment) %>% select(one_of(lipids))
+  df_diff<- sweep(df_treat, 2, colMeans(df_control), "-")
+  long<- gather(df_diff)
+  long$value<- long$value*1000
+  long<- filter(long, key %in% lipids)
+  p<- ggplot(long, aes(x=key, y=value))+ geom_boxplot()
+  p
+}
+# desat.effect(DesatIndex2, rSTD_Veh, rSTD_SCDi) + ggtitle("Effect of SCDi under R condition")
+# desat.effect(DesatIndex2, sSTD_Veh, sSTD_SCDi) + ggtitle("SCDi effect under S condition")
+# desat.effect(DesatIndex2, sDOX_Veh, sDOX_SCDi) + ggtitle("SCDi effect under S condition after DGAT knockdown")
+# desat.effect(DesatIndex2, rDOX_Veh, rDOX_SCDi) + ggtitle("SCDi effect under R condition after DGAT knockdown")
+# 
+# desat.effect(DesatIndex2, rSTD_Veh, rDOX_Veh) + ggtitle("Effect of DGAT knockdown under R condition")
+# desat.effect(DesatIndex2, sSTD_Veh, sDOX_Veh) + ggtitle("Effect of DGAT knockdown under S condition")
+
+
+##removing some lipid species
+desat.effect(DesatIndex2, rSTD_Veh, rSTD_SCDi, lipids = lipids2) + ggtitle("Effect of SCDi under R condition")+ coord_cartesian(ylim=c(-0.002, 0.00125))
+
+desat.effect(DesatIndex2, sSTD_Veh, sSTD_SCDi, lipids = lipids2) + ggtitle("SCDi effect under S condition")+ coord_cartesian(ylim=c(-0.002, 0.00125))
+
+
+
+# desat.effect(DesatIndex2, sDOX_Veh, sDOX_SCDi, lipids = lipids2) + ggtitle("SCDi effect under S condition after DGAT knockdown")+ coord_cartesian(ylim=c(-0.002, 0.00125))
+# desat.effect(DesatIndex2, rDOX_Veh, rDOX_SCDi, lipids = lipids2) + ggtitle("SCDi effect under R condition after DGAT knockdown")+ coord_cartesian(ylim=c(-0.002, 0.00125))
+# 
+# desat.effect(DesatIndex2, rSTD_Veh, rDOX_Veh, lipids = lipids2) + ggtitle("Effect of DGAT knockdown under R condition")+ coord_cartesian(ylim=c(-0.002, 0.00125))
+# desat.effect(DesatIndex2, sSTD_Veh, sDOX_Veh, lipids = lipids2) + ggtitle("Effect of DGAT knockdown under S condition")+ coord_cartesian(ylim=c(-0.002, 0.00125))
+
+
+rSCDi<-  desat.effect(DesatIndex2, rSTD_Veh, rSTD_SCDi, lipids = lipids2) + ggtitle("Effect of SCD1 inhibition \nunder 5% serum growth conditions")+  theme_bw() +labs(y="Relative change in \nindex of desaturation", x= "Lipid Species")+ coord_cartesian(ylim=c(-2, 0))+ geom_hline(aes(yintercept=0))+ theme(plot.title=element_text(size=rel(0.8)))
+#+theme(axis.title.x=element_text(size = 25), axis.text.x=element_text(size=20),
+ #       axis.title.y=element_text(size = 25), axis.text.y=element_text(size=20))
+rSCDi
+sSCDi<-  desat.effect(DesatIndex2, sSTD_Veh, sSTD_SCDi, lipids = lipids2) + ggtitle("Effect of SCD1 inhibition \nunder 0.5% serum growth conditions")+  theme_bw() +labs(y="Relative change in \nindex of desaturation", x= "Lipid Species")+ coord_cartesian(ylim=c(-2, 0))+ geom_hline(aes(yintercept=0))+ theme(plot.title=element_text(size=rel(0.8)))
+sSCDi
+#################################################################################
+##making figure here
+# ggsave("./20160127/rSCDi.pdf", plot = rSCDi, width=3, height=4, useDingbats=FALSE)
+# ggsave("./20160127/sSCDi.pdf", plot = sSCDi, width=3, height=4, useDingbats=FALSE)
+#################################################################################
+
+# ggsave("./20160127/rSCDi2.pdf", plot = rSCDi, width=2, height=4, useDingbats=FALSE)
+# ggsave("./20160127/sSCDi2.pdf", plot = sSCDi, width=2, height=4, useDingbats=FALSE)
+
+
+```
+#############################################################################################
+
+#############################################################################################
+
+In order to create a figure showing changes in the abundance of all lipid types, create a function that summarizes a list containing all raw data into a dataframe containing the mean abundance for each lipid type (rows) for each sample (columns). 
+
+Once this dataset is available, a function that creates a heatmap of changes in abundance for each pairwise comparison is required.
+
+Given that identifying and removing outliers was critical for the accurate assessment of TG abundance, an improvement to this function would be one that automates outlier identification and censoring for this dataset. THis function could then be applied throughout the analysis. 
+
+```{r}
+
+string<- c("R-STD_Veh", "R-STD_SCDi", "R-DOX_Veh", "R-DOX_SCDi", 
+           "S-STD_Veh", "S-STD_SCDi", "S-DOX_Veh", "S-DOX_SCDi")
+
+
+mk.names<- function(string, df){
+  # uses grep string to identify all column names in a dataframe that contain this term
+  # takes dataframe and vector of character strings corresponding to groupings
+  # output is a list. name of list elements corresponds to group, contents to samples in that group
+  
+    out1<- vector("list", length = length(string))
+  for (i in 1:length(string)){
+    x <-  names(df)[grep(string[i], names(df))]
+    out1[[i]]<- x
+    names(out1)[i]<- string[i]
+  }
+  out1
+  
+}
+
+names1<- mk.names(string = string, satlist1[["TG"]])
+
+
+abund<- function(df, exclude=c()){
+  ## df: dataframe containg raw abundance for each lipid (each row = 1 lipid, each column= one sample). 
+  ## exclude: columns to exclude from output. Auto excludes "Label" column, which contains lipid names
+  ## function operation
+    ### take column means and copy into a dataframe
+      #### structure of this dataframe: 
+      #### columns are replicate names
+      #### each row corresponds to different lipid type
+    ###output this dataframe
+  exclude2<- c("Label", exclude)
+  excluded<- select(df, one_of(exclude2))
+  included<- names(df)[!(names(df)%in% exclude2)] #vector of included columns
+  df2<- select(df, one_of(included))
+  colSums(df2)
+   # df2 
+}
+
+
+abundance<- t(as.data.frame(sapply(liplist2, abund)))  #use vapply instead?
+#abundance2<- scale(abundance, center = FALSE, scale = colMeans((abundance)))
+abundance2<- sweep(abundance, 2, colSums(abundance), "/") ##maybe need to do this after adding group together?
+
+group.mean<- function(vec, df){
+  ## takes dataframe, subsets only columns included in "vec"
+  ## calculates rowMeans for reduced dataframe
+  df2<- df[, colnames(df) %in% vec]
+  mns<- rowMeans(df2)
+  mns
+}
+
+# 
+# abundance3<- vapply(names1, group.mean, abundance2, FUN.VALUE = numeric(nrow(abundance2)))
+# abundance4<- sweep(abundance3, 1, abundance3[,1], "/")
+# abundance5<- as.data.frame(abundance4) #as.data.frame(abundance4[, 2:ncol(abundance4)])
+# abundance5$Lipid<- c(rownames(abundance5))
+# long_abundance<- gather(abundance5, key = Group, value= Measurement, 1:8)
+
+
+
+ht.map<- function(names, df, ctrl_group){
+  ## df containing each sample in a differnet row, with total abundance of each lipid type in each column
+  ## names: list of vectors corresponding to sample groups. name of vector is group name, elements of vector are replicates of that group. 
+    ### each dataframe, for loop over elements of "names"
+    ### identify columns corresponding to elements of names vector
+  
+df2<- vapply(names, group.mean, df, FUN.VALUE = numeric(nrow(df)))
+if (!ctrl_group %in% colnames(df2)){
+  stop("Incorrect group name for control group")
+  }
+  ctrl<- df2[,colnames(df2)==ctrl_group]
+  df3<- sweep(df2, 1, ctrl, "/")
+  df4<- as.data.frame(df3) #as.data.frame(abundance4[, 2:ncol(abundance4)])
+  df4$Lipid<- c(rownames(df4))
+  long_abundance<- gather(df4, key = Group, value= Measurement, 1:(ncol(df4)-1))
+  long_abundance
+}
+
+long_abundance<- ht.map(names = names1, df= abundance, ctrl_group = "R-STD_Veh") # does not normalize each sample so sum = 1
+long_abundance2<- ht.map(names = names1, df= abundance2, ctrl_group = "R-STD_Veh") # each sample normalized so sum = 1
+long_abundance3<- ht.map(names = names1, df= abundance2, ctrl_group = "S-STD_Veh") # each sample normalized so sum = 1
+
+
+
+o<- ggplot(long_abundance, aes(Group, Lipid))  + geom_tile(aes(fill = Measurement), colour = "white")
+o<- o + scale_fill_gradient(low = "white", high = "steelblue") 
+o
+
+
+p<- ggplot(long_abundance, aes(Group, Lipid))  + geom_tile(aes(fill = Measurement), colour = "white")
+p<- p + scale_fill_gradient(low = "white", high = "steelblue") 
+p<- p+ theme_grey() + labs(x = "", y = "") + scale_x_discrete(expand = c(0, 0)) 
+p<- p+ scale_y_discrete(expand = c(0, 0)) #+ opts(legend.position = "none", axis.ticks = theme_blank(), 
+                                           #      axis.text.x = theme_text(size = base_size *0.8, angle = 330, 
+                                            #                              hjust = 0, colour = "grey50"))
+p
+
+# need to introduce procedure to censor ouliers further upstream to be consistent with previous analyses!
+  
+
+
+```
